Showcase with all Spectator components

--- a/public/showcase.html
+++ b/public/showcase.html
@@ -8,7 +8,14 @@
           rel="stylesheet">
   </head>
   <body>
+    <h1>TimelineEntry</h1>
     <div id="timeline-entry"></div>
+    <h1>Timeline</h1>
+    <div id="timeline"></div>
+    <h1>TeamScore</h1>
+    <div id="team-score"></div>
+    <h1>Scoreboard</h1>
+    <div id="scoreboard"></div>
     <script src="/static/build/showcase.js"></script>
   </body>
 </html>
