--- a/public/showcase.html
+++ b/public/showcase.html
@@ -16,6 +16,11 @@
     <div id="team-score"></div>
     <h1>Scoreboard</h1>
     <div id="scoreboard"></div>
+
+    <h1>Spectator Root</h1>
+    <div id="spectator"></div>
+    <h1>Referee Root</h1>
+    <div id="referee"></div>
     <script src="/static/build/showcase.js"></script>
   </body>
 </html>
